<resources>
    <string name="app_name">Enfermeria Bengalas</string>
    <string name="hello_blank_fragment">Texto Prueba</string>
    <string name="enfermeria_epoana">Enfermería EPOANA</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="registrar">Registrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="cargo">Cargo</string>
    <string name="email">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="logo_bengala">icono bengalas</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="ya_registrado">¿Ya estás registrado?</string>
    <string name="signin">Iniciar Sesión</string>
    <string name="no_registrado">¿Aún no te registras?</string>
    <string name="nombre">Nombre</string>
    <string name="btn_pill">Botón de pastilla</string>
    <string name="btn_call">Botón de teléfono</string>
    <string name="stomachache">Dolor de\nestómago</string>
    <string name="headache">Dolor de\ncabeza</string>
    <string name="dizzy">Mareo</string>
    <string name="first_aid">Kit de primeros\nauxilios</string>
    <string name="womens_health">Mujeres</string>
    <string name="flu">Gripe o\nFiebre</string>
    <string name="search_hint">Buscar medicamento</string>
    <string name="search_description">Buscador de medicamentos</string>
    <string name="saludo">Bienvenido</string>
    <string name="btn_logout">Cerrar Sesión</string>
    <string name="medicine">Imagen Medicamento</string>
    <string name="trash">Icono de bote de basura</string>
    <string name="edit">Icono de lápiz</string>
    <string name="back">Icono de flecha</string>
    <string name="forgot_password">Olvide mi contraseña</string>
    <string name="send">Enviar</string>
    <string name="res_password">Restablecer contraseña</string>
    <string name="res_password_description">Ingrese su correo electrónico para restablecer su contraseña</string>
    <string name="logo_pass">logo restablecer contraseña</string>
    <string name="btn_help">Botón de ayuda</string>
    <string name="title_new_medicine">Nuevo medicamento</string>
    <string name="add_medicine">Agregar\nmedicamento</string>
    <string name="medicine_name">Nombre del medicamento</string>
    <string name="medicine_category">Categoría del medicamento</string>
    <string name="medicine_description">Descripción del medicamento</string>
    <string name="medicine_quantity">Cantidad del medicamento</string>
    <string name="support">SOPORTE</string>
    <string name="change_icon">Cambiar icono</string>
    <string name="title_edit_medicine">Editar Medicamento</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="btn_search">Botón de búsqueda</string>
    <string name="btn_notification">Botón de notificaciones</string>
    <string name="notifications">Notificaciones</string>
    <string name="Saliendo">Saliendo%1$s</string>
    <string name="character_count">"%1$d/12"</string>
    <string name="message">Esta aplicación fue creada en colaboración con:</string>
    <string name="bengala_sad">Bengala triste</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="eliminar_cuenta">¿Estás seguro de que deseas eliminar tu cuenta?</string>
    <string name="delete_secure">Esta acción es irreversible y eliminará todos tus datos de la aplicación.</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="minus_btn">Botón de menos</string>
    <string name="plus_btn">Botón de más</string>
    <string name="channel_name">BOORADO DE CUENTA</string>
    <string name="channel_description">NOTIFICACIONES DE BORRADO DE CUENTA</string>
    <string name="availability_channel_name">DISPONIBILIDAD</string>
    <string name="availability_channel_description">NOTIFICACIONES DE DISPONIBILIDAD</string>
    <string name="icons8">Icono de Icons8</string>
    <string name="escuela">Logo de la escuela</string>
    <string name="back_develop">Desarrollador Back</string>
    <string name="ux_ui_designer">Diseñadora UX/UI</string>
    <string name="EPOANA">EPOANA</string>
    <string name="Icons8">Icons8</string>
    <string name="contact">¡Contactanos!</string>
    <string name="Whatsapp">Whatsapp</string>
    <string name="Facebook">Facebook</string>
    <string name="Github">Github</string>
    <string name="app">Desarrollada por alumnos de ISC TESCHA, ¿Quieres una app móvil o sistema para tu negocio?</string>
    <string name="instrucciones">Pulsa los iconos para interactuar</string>
    <string name="Nom1">William</string>
    <string name="Nom2">Ariana</string>
    <string name="Will_description">Backend and Frontend developer</string>
    <string name="Ari_description">UX/UI Designer</string>
    <string name="TESCHA">TESCHA</string>
    <string name="icon_moon">Icono de luna</string>
    <string name="icon_sun">Icono de sol</string>
    <string name="no_medicines">"Aún no hay medicamentos disponibles en esta sección 😔"</string>
</resources>